# demo

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deployment.yml
app/: __main__.py  main.py  managers.py  models.py  parsers.py  utils.py
tests/: test_managers.py  test_models.py  test_parsers.py  test_utils.py
