[tool.poetry]
name = "statementdog"
version = "0.1.0"
description = ""
authors = ["Chris <houhautian@tagtoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"
lxml = "^4.9.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = ">=6.1.0"
ipython = "^8.4.0"
pytest-asyncio = "^0.18.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
